--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "marked": "^15.0.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.2.0"
+    "react-router-dom": "^7.2.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "rsuite": "^5.78.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
