--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "marked": "^15.0.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^7.2.0",
     "react-syntax-highlighter": "^15.6.1",
     "rsuite": "^5.78.0"
